<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainpagebackground"
    android:orientation="vertical"
    android:padding="@dimen/layout_margin"
    tools:context=".newpost.AddPostActivity">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/txtAddPostDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_a_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBtnAddPostImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_alt_black_24dp" />


        <Button
            android:id="@+id/btnAddPostChooseGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_choose_gallery"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:theme="@style/Widget.Design.FloatingActionButton" />


    </LinearLayout>

    <Button
        android:id="@+id/btnAddPostCheckImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_check_photo"
        android:textColor="@android:color/white"
        android:theme="@style/Widget.Design.FloatingActionButton" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardBackground">
        <TextView
            android:id="@+id/txtAddPostImageDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:layout_marginTop="@dimen/text_input_distance"
            android:textSize="@dimen/text_size_details" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnAddPostToCommunity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btn_clean"
        android:textColor="@android:color/white"
        android:theme="@style/Widget.Design.FloatingActionButton" />

</LinearLayout>
