<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_margin"
    android:background="@drawable/mainpagebackground"
    android:orientation="vertical"
    tools:context=".newpost.CleanActivity">

    <Button
        android:id="@+id/btnCleanOpenMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_open_map"
        android:textColor="@android:color/white"
        android:theme="@style/Widget.Design.FloatingActionButton" />

    <ImageView
        android:id="@+id/imgBtnCleanImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/ic_camera_alt_black_24dp" />

    <Button
        android:id="@+id/btnCleanChooseGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_choose_gallery"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:theme="@style/Widget.Design.FloatingActionButton" />

    <Button
        android:id="@+id/btnCleanCheckImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_clean"
        android:textColor="@android:color/white"
        android:theme="@style/Widget.Design.FloatingActionButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_layout_inner"
        android:orientation="vertical">

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:text="@string/photo_verify_label"-->
        <!--android:textSize="@dimen/text_size_details" />-->

        <!--<TextView-->
        <!--android:id="@+id/txtCleanPhotoVerify"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/text_input_distance"-->
        <!--android:layout_weight="1"-->
        <!--android:text="@string/verified"-->
        <!--android:textSize="@dimen/text_size_details" />-->
        <!--</LinearLayout>-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_distance">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/community_verify_label"
                android:textSize="@dimen/text_size_details" />

            <TextView
                android:id="@+id/txtCleanCommunityVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/to_be_verified"
                android:textSize="@dimen/text_size_details" />
        </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
